Move bot weapon configs into a separate file with special macros. - Add shooting frequency for weapons to not hold the fire button indefinitely. - Add bot thoughts stack that displays recent bot decisions and other info. - Improve position prediction using the accuracy percentage. - Add function for the HUD overlay rendering. - Decrease checks for vertical target point distance. - Add settings for the third person view and crosshair type.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -6,7 +6,7 @@ Gadget:
 Type:   Separator
 
 //
-Gadget: TTRS TEMP: Bot's name
+Gadget: TTRS Bot's name
 Tip:    TTRS which name to spawn a bot with
 Var:    BOT_strSpawnName
 
@@ -18,6 +18,38 @@ String: "My Bot"
 Value:  My Bot
 String: "T-1000"
 Value:  T-1000
+
+//
+Gadget: TTRS Third person view
+Tip:    TTRS prefer third person view or not
+Var:    BOT_b3rdPerson
+
+String: TTRS No
+Value:  0
+String: TTRS Yes
+Value:  1
+
+//
+Gadget: TTRS Crosshair type
+Tip:    TTRS specific crosshair type
+Var:    BOT_iCrosshair
+
+String: TTRS Random
+Value:  -1
+String: 0
+Value:  0
+String: 1
+Value:  1
+String: 2
+Value:  2
+String: 3
+Value:  3
+String: 4
+Value:  4
+String: 5
+Value:  5
+String: 6
+Value:  6
 
 //
 Gadget:
