Move sandbox actions into separate source files. - Add command and shortcuts for adding range to a NavMesh point. - Add key shortcuts in the command help file.

--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -320,6 +320,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClCompile Include="..\Bots\BotMovement.cpp" />
     <ClCompile Include="..\Bots\BotWeapons.cpp" />
     <ClCompile Include="..\Bots\Patcher\patcher.cpp" />
+    <ClCompile Include="..\Bots\SandboxActions.cpp" />
     <ClCompile Include="..\Bots\SandboxCommon.cpp" />
     <ClCompile Include="..\Bots\BotModMain.cpp" />
     <ClCompile Include="..\Bots\NetworkPatch\ServerIntegration.cpp" />
@@ -585,6 +586,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClInclude Include="..\Bots\BotWeapons.h" />
     <ClInclude Include="..\Bots\Patcher\patcher.h" />
     <ClInclude Include="..\Bots\Patcher\patcher_defines.h" />
+    <ClInclude Include="..\Bots\SandboxActions.h" />
     <ClInclude Include="..\Bots\SandboxCommon.h" />
     <ClInclude Include="..\Bots\BotModMain.h" />
     <ClInclude Include="..\Bots\NetworkPatch\StreamBlock.h" />
