--- a/Sources/EntitiesMP/EntitiesMP.vcxproj.filters
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj.filters
@@ -604,6 +604,9 @@
     <ClCompile Include="..\Bots\BotWeapons.cpp">
       <Filter>Source Files\Bots sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\Bots\SandboxActions.cpp">
+      <Filter>Source Files\Bots sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Common.h">
@@ -1591,6 +1594,9 @@
       <Filter>Header Files\Bots headers</Filter>
     </ClInclude>
     <ClInclude Include="..\Bots\BotWeapons.h">
+      <Filter>Header Files\Bots headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Bots\SandboxActions.h">
       <Filter>Header Files\Bots headers</Filter>
     </ClInclude>
   </ItemGroup>
