Add bot setting for important point picking chance. - Fix crash upon selecting a point without any NavMesh points on the level.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -653,6 +653,37 @@ String: TTRS Yes (default)
 Value:  1
 
 //
+Gadget: TTRS Important points chance
+Tip:    TTRS how often to pick important points
+Type:   Toggle
+Var:    BOT_fImportantChance
+
+String: TTRS 0% (don't pick)
+Value:  0
+String: TTRS 5%
+Value:  0.05
+String: TTRS 10%
+Value:  0.1
+String: TTRS 20% (default)
+Value:  0.2
+String: TTRS 30%
+Value:  0.3
+String: TTRS 40%
+Value:  0.4
+String: TTRS 50%
+Value:  0.5
+String: TTRS 60%
+Value:  0.6
+String: TTRS 70%
+Value:  0.7
+String: TTRS 80%
+Value:  0.8
+String: TTRS 90%
+Value:  0.9
+String: TTRS 100% (always)
+Value:  1
+
+//
 Gadget: TTRS Item search
 Tip:    TTRS should bots search for items or not
 Type:   Toggle
@@ -687,6 +718,10 @@ String: 20
 Value:  20
 String: 30
 Value:  30
+
+//
+Gadget:
+Type:   Separator
 
 //
 Gadget: TTRS Item visibility
