Add missing option for customizing health search threshold. - Render bot thoughts and NavMesh points in demos. - Update Red Station navmesh.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -766,6 +766,35 @@ String: 64
 Value:  64
 
 //
+Gadget: TTRS Health search amount
+Tip:    TTRS search for health if below this amount
+Type:   Toggle
+Var:    BOT_fHealthSearch
+
+String: TTRS Don't search
+Value:  0
+String: 10
+Value:  10
+String: 20
+Value:  20
+String: 30
+Value:  30
+String: 40
+Value:  40
+String: 50
+Value:  50
+String: 60
+Value:  60
+String: 70
+Value:  70
+String: 80
+Value:  80
+String: 90
+Value:  90
+String: TTRS 100 (default)
+Value:  100
+
+//
 Gadget: TTRS Health search distance
 Tip:    TTRS search for health within this range
 Type:   Toggle
