Move player-specific definitions into a separate file. - Share player flags and actions definitions with the bot. - Replace inline default weapon types with customizable macros. - Move bot thoughts definition into the main bot mod header.

--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -586,6 +586,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClInclude Include="..\Bots\BotWeapons.h" />
     <ClInclude Include="..\Bots\Patcher\patcher.h" />
     <ClInclude Include="..\Bots\Patcher\patcher_defines.h" />
+    <ClInclude Include="..\Bots\PlayerCommon.h" />
     <ClInclude Include="..\Bots\SandboxActions.h" />
     <ClInclude Include="..\Bots\SandboxCommon.h" />
     <ClInclude Include="..\Bots\BotModMain.h" />
