Add allowed weapons option into bot customization. - Update writing directories for the mod. - Add mod screenshot into README.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -55,7 +55,7 @@ Value:  6
 Gadget:
 Type:   Separator
 //
-Gadget: TTRS Aiming options
+Gadget: TTRS Weapon options
 Type:   Separator
 //
 Gadget:
@@ -156,6 +156,31 @@ String: 20
 Value:  20
 String: 50
 Value:  50
+
+//
+Gadget: TTRS Allowed weapons
+Tip:    TTRS which weapons should bots use (weapon mask)
+Type:   Toggle
+Var:    BOT_iAllowedWeapons
+
+String: TTRS All (default)
+Value:  -1
+String: TTRS Only Knife
+Value:  1
+String: TTRS Bullets & Melee
+Value:  4735
+String: TTRS Projectiles & Melee
+Value:  3969
+String: TTRS No Colts
+Value:  16377
+String: TTRS No Sniper
+Value:  12287
+String: TTRS No Cannon
+Value:  8191
+String: TTRS No Colts & Sniper & Cannon
+Value:  4089
+String: TTRS None
+Value:  0
 
 //
 Gadget:
