Add command for setting custom teams for bots. - Bots with specific teams won't attack players and bots under the same team.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -20,6 +20,18 @@ String: "T-1000"
 Value:  T-1000
 
 //
+Gadget: TTRS Bot's team
+Tip:    TTRS which team to spawn a bot in
+Var:    BOT_strSpawnTeam
+
+String: TTRS No team
+Value:  
+String: "Red"
+Value:  Red
+String: "Blue"
+Value:  Blue
+
+//
 Gadget: TTRS Third person view
 Tip:    TTRS prefer third person view or not
 Var:    BOT_b3rdPerson
