--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -331,9 +331,9 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClCompile Include="Common\HUD.cpp" />
     <ClCompile Include="Common\Particles.cpp" />
     <ClCompile Include="Common\PathFinding.cpp" />
-    <ClCompile Include="BotModGlobal.cpp" />
-    <ClCompile Include="NavMeshGenerator.cpp" />
-    <ClCompile Include="PlayerBot.cpp" />
+    <ClCompile Include="..\Bots\Classes\BotModGlobal.cpp" />
+    <ClCompile Include="..\Bots\Classes\NavMeshGenerator.cpp" />
+    <ClCompile Include="..\Bots\Classes\PlayerBot.cpp" />
     <ClCompile Include="StdH\StdH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_110|Win32'">Create</PrecompiledHeader>
@@ -599,12 +599,12 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClInclude Include="Common\GameInterface.h" />
     <ClInclude Include="Common\Particles.h" />
     <ClInclude Include="Common\PathFinding.h" />
-    <ClInclude Include="BotModGlobal.h" />
-    <ClInclude Include="BotModGlobal_tables.h" />
-    <ClInclude Include="NavMeshGenerator.h" />
-    <ClInclude Include="NavMeshGenerator_tables.h" />
-    <ClInclude Include="PlayerBot.h" />
-    <ClInclude Include="PlayerBot_tables.h" />
+    <ClInclude Include="..\Bots\Classes\BotModGlobal.h" />
+    <ClInclude Include="..\Bots\Classes\BotModGlobal_tables.h" />
+    <ClInclude Include="..\Bots\Classes\NavMeshGenerator.h" />
+    <ClInclude Include="..\Bots\Classes\NavMeshGenerator_tables.h" />
+    <ClInclude Include="..\Bots\Classes\PlayerBot.h" />
+    <ClInclude Include="..\Bots\Classes\PlayerBot_tables.h" />
     <ClInclude Include="StdH\StdH.h" />
     <ClInclude Include="Common\WeaponPositions.h" />
     <ClInclude Include="AirElemental.h" />
@@ -3967,26 +3967,26 @@ ecc EntitiesMP/%(Filename).es </Command>
     <CustomBuild Include="..\..\Flesh\Data\Messages\Enemies\Woman.txt" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="PlayerBot.es">
+    <CustomBuild Include="..\Bots\Classes\PlayerBot.es">
       <FileType>Document</FileType>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(Filename).cpp;%(Outputs)</Outputs>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">EntitiesMP/%(Filename).es</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Bots/Classes/%(Filename).es</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">cd $(SolutionDir)
-ecc EntitiesMP/%(Filename).es </Command>
+ecc Bots/Classes/%(Filename).es </Command>
     </CustomBuild>
-    <CustomBuild Include="BotModGlobal.es">
+    <CustomBuild Include="..\Bots\Classes\BotModGlobal.es">
       <FileType>Document</FileType>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">EntitiesMP/%(Filename).es</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Bots/Classes/%(Filename).es</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(Filename).cpp;%(Outputs)</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">cd $(SolutionDir)
-ecc EntitiesMP/%(Filename).es </Command>
+ecc Bots/Classes/%(Filename).es </Command>
     </CustomBuild>
-    <CustomBuild Include="NavMeshGenerator.es">
+    <CustomBuild Include="..\Bots\Classes\NavMeshGenerator.es">
       <FileType>Document</FileType>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">EntitiesMP/%(Filename).es</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Bots/Classes/%(Filename).es</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(Filename).cpp;%(Outputs)</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">cd $(SolutionDir)
-ecc EntitiesMP/%(Filename).es </Command>
+ecc Bots/Classes/%(Filename).es </Command>
     </CustomBuild>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
