Move bot item function definitions to a separate file. - Simplify bot settings serialization. - Fix a bunch of comments.

--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -319,6 +319,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClCompile Include="..\Bots\BotModMain.cpp" />
     <ClCompile Include="..\Bots\CustomPackets.cpp" />
     <ClCompile Include="..\Bots\Logic\BotFunctions.cpp" />
+    <ClCompile Include="..\Bots\Logic\BotItems.cpp" />
     <ClCompile Include="..\Bots\Logic\BotMovement.cpp" />
     <ClCompile Include="..\Bots\Logic\BotWeapons.cpp" />
     <ClCompile Include="..\Bots\NetworkPatch\Serialization.cpp" />
